trying to fix timepickers clock to appear behind the modal window

--- a/src/components/AddTimeSlotModal/AddTimeSlotModal.scss
+++ b/src/components/AddTimeSlotModal/AddTimeSlotModal.scss
@@ -62,3 +62,6 @@
     width: 250px;
    }
 }
+.MuiDialogContent-root{
+    overflow: visible;
+}
